envoy.json
{
  "admin":{
    "access_log_path":"/tmp/admin_access_log",
    "address":"tcp://127.0.0.1:8001"
  },
  "cluster_manager":{
    "clusters":[
      {
        "connect_timeout_ms":1000,
        "hosts":[
          {
            "url":"tcp://tasks:80"
          }
        ],
        "lb_type":"round_robin",
        "name":"tasks",
        "type":"strict_dns"
      },
      {
        "connect_timeout_ms":1000,
        "hosts":[
          {
            "url":"tcp://tasks-canary:80"
          }
        ],
        "lb_type":"round_robin",
        "name":"tasks-canary",
        "type":"strict_dns"
      },
      {
        "connect_timeout_ms":1000,
        "hosts":[
          {
            "url":"tcp://search:80"
          }
        ],
        "lb_type":"round_robin",
        "name":"search",
        "type":"strict_dns"
      },
      {
        "connect_timeout_ms":1000,
        "hosts":[
          {
            "url":"tcp://search-canary:80"
          }
        ],
        "lb_type":"round_robin",
        "name":"search-canary",
        "type":"strict_dns"
      },
      {
        "connect_timeout_ms":5000,
        "hosts":[
          {
            "url":"tcp://auth:80"
          }
        ],
        "lb_type":"random",
        "name":"ext_auth",
        "type":"logical_dns"
      }
    ]
  },
  "listeners":[
    {
      "address":"tcp://0.0.0.0:80",
      "filters":[
        {
          "name":"http_connection_manager",
          "type":"read",
          "config":{
            "access_log":[
              {
                "path":"/tmp/access_log"
              }
            ],
            "codec_type":"auto",
            "filters":[
              {
                "name":"extauth",
                "type":"decoder",
                "config":{
                  "cluster":"ext_auth",
                  "timeout_ms":5000
                }
              },
              {
                "config":{},
                "name":"router",
                "type":"decoder"
              }
            ],
            "route_config":{
              "virtual_hosts":[
                {
                  "name":"backend",
                  "domains":[
                    "*"
                  ],
                  "routes":[
                    {
                      "prefix":"/tasks",
                      "prefix_rewrite":"/",
                      "weighted_clusters": {
                        "clusters": [
                          { "name": "tasks", "weight": 90 },
                          { "name": "tasks-canary", "weight": 10 }
                        ]
                      }
                    },
                    {
                      "prefix":"/search",
                      "prefix_rewrite":"/",
                      "weighted_clusters": {
                        "clusters": [
                          { "name": "search", "weight": 90 },
                          { "name": "search-canary", "weight": 10 }
                        ]
                      }
                    }
                  ]
                }
              ]
            },
            "stat_prefix":"ingress_http"
          }
        }
      ]
    }
  ],
  "stats_flush_interval_ms":1000,
  "statsd_local_udp_port":8125
}
